--- a/style.css
+++ b/style.css
@@ -37,15 +37,15 @@ width: 33.3%;
 
 .main{
   width: 45rem;
-  padding: 5%;
+ 
 }
 
 .section-1,
-.section-2,
-.section-3{
-  width: 70%;
+.section-2
+{
+  width: 80%;
   text-align: center;
-  margin-left: 15%;
+  margin-left: 10%;
 
 
 }
@@ -56,10 +56,14 @@ width: 33.3%;
   padding-top: 10%;
   padding-bottom: 10%;
 }
+.section-1__h1{
+  font-weight: 700;
+}
 .section-1__p{
-  width: 65%;
+  width: 60%;
   text-align: center;
   margin-left: 20%;
+ 
 }
 
 .section-1__input,
@@ -77,5 +81,117 @@ width: 33.3%;
   background-color: blue;
   
 }
+
+.section-2__h2{
+  font-weight: 700;
+  padding-bottom: 5%;
+}
+.section-2__p, 
+.section-2__p2{
+  width: 100%;
+  text-align: justify;
+  margin-left: 0%;
+ 
+}
+
+.section2-span{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:2%;
+  padding: 5%;
+  
+}
+.section-2__h4{
+  font-size:larger;
+  color: green;
+  text-decoration: underline;
+  text-decoration-color: green;
+  
+}
+.fa-solid{
+  color: green;
+}
+
+.fa-2{
+  color: black;
+  text-align: left;
+  margin-right: 90%;
+}
+
+.section-3{
+  width: 60%;
+  border: solid 1px;
+  margin-left: 20%;
+}
+.section-3__p{
+  padding: 5%;
+  padding-top: 0%;
+ 
+}
+
+.section-3__div{
+  display: flex;
+  gap: 2%;
+  padding-left: 4%;
+}
+.section-3__img{
+  width: 15%;
+  height: 15%;
+  border-radius: 50%;
+}
+.section-4{
+  padding: 10%;
+  
+  margin-top: 15%;
+  
+  text-align: center;
+ /*margin-left: -10%;
+ margin-right: -2%;*/
+  background-color:rgb(71, 71, 150);
+  color: white;
+  border: 50%;
+}
+
+.section-4__p{
+  width: 55%;
+  margin-left: 22%;
+
+}
+.section-4__input,
+.section-4__button {
+  width: 60%;
+  padding: 1%;
+  margin: 2%;
+  border-radius: 4px;
+
+}
+
+.section-4__button{
+  border:none;
+  color: white;
+  background-color: blue;
+  
+}
+
+.footer{
+  background-color: rgb(8, 8, 98);
+  box-sizing: unset;
+  padding-bottom: 2%;
+  color: white;
+}
+
+.footer__divp{
+  width: 100%;
+  height: 100%;
+}
+.img-fylo{
+  color: white;
+  width: 10rem;
+  height: 5rem;
+  
+}
+
+
 
 
