--- a/style.css
+++ b/style.css
@@ -184,6 +184,10 @@ width: 33.3%;
 .footer__divp{
   width: 100%;
   height: 100%;
+  padding: 5%;
+}
+.footer__divp__1{
+  padding: 5%;
 }
 .img-fylo{
   color: white;
@@ -191,6 +195,29 @@ width: 33.3%;
   height: 5rem;
   
 }
+.footer__divp__2{
+  padding: 5%;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__nav1, 
+.footer__nav2 {
+  padding: 5%;
+  padding-top: 0%;
+}
+.footer__nav1__ul,
+.footer__nav2__ul{
+  list-style: none;
+}
+.footer__imgdiv{
+  display: flex;
+  align-content: center;
+  gap: 3%;
+  margin-left: 45%;
+  
+}
+
 
 
 
