--- a/style.css
+++ b/style.css
@@ -2,10 +2,17 @@
   margin: 0;
   padding: 0;
 }
-
+:root {
+  --color-circulo-imagotipo: #FF4745;
+  --color-p-imagotipo: #181F2C;
+  --white: #FFFFFF;
+}
 .header{
-  font-family: 'Raleway', sans-serif;
-  width: 35rem;
+  display: flex;
+  gap: 20%;
+  padding-top: 5%;
+  /*font-family: 'Raleway', sans-serif;
+  width: 20rem;
   height: 5%;
  
   display: flex;
@@ -13,11 +20,22 @@
   gap: 10%;
   padding-top: 5%;
   padding-bottom: 10%;
-  padding-right: 15%;
+  padding-right: 15%;*/
   
 }
 
+.header__logo{
+  width:2rem;
+  height:2rem;
+  padding-left: 1rem;
+}
+.img-header{
+  width: 5rem;
+}
 
+.nav{
+font-size: smaller;
+}
 .nav-link {
   font-family: 'Raleway', sans-serif;
   color: black;
@@ -26,11 +44,18 @@
 
 
 .main{
-  width: 35rem;
+  /*width: 35rem;
   padding-top: 20%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;*/
   
  
+}
+
+.section-desk-1,
+.section-desk-2{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .section-1,
@@ -43,29 +68,37 @@
 
 }
 
+.img-1, 
+.img-2__div-img{
+  display: flex;
+  justify-content: center;
+}
+
 .img-1__img,
 .img-2__img{
-  width: 30rem;
+  width: 15rem;
   padding-top: 10%;
   padding-bottom: 10%;
-  padding-left: 5%;
-  margin-left: 5%;
+  
+  /*padding-left: 5%;
+  margin-left: 5%;*/
 }
-.section-1__h1{
+
+
+.section-1__h1
+{
   font-weight: 700;
+  font-size:x-large;
   
 }
-.section-1__p{
-  width: 60%;
+.section-1__p{ 
   text-align: center;
-  margin-left: 20%;
- 
 }
 
 .section-1__input,
 .section-1__button {
-  width: 60%;
-  padding: 1%;
+  width: 100%;
+  padding: 2%;
   margin: 2%;
   border-radius: 4px;
 
@@ -74,7 +107,7 @@
 .section-1__button{
   border:none;
   color: white;
-  background-color: blue;
+  background-color:  hsl(224, 93%, 58%);
   
 }
 
@@ -87,15 +120,18 @@
   padding-top: 15%;
 }
 .section-2__h2{
+  
   font-weight: 700;
   padding-bottom: 5%;
+  font-size:medium;
 }
 .section-2__p, 
 .section-2__p2{
-  width: 100%;
-  text-align: justify;
-  margin-left: 0%;
+  width: 120%;
+  text-align:left;
+  margin-left: -8%;
   color: rgb(84, 83, 83);
+  font-size: medium;
  
 }
 
@@ -126,10 +162,10 @@
 }
 
 .section-3{
-  width: 60%;
+  width: 90%;
   background-color: white;
   box-shadow: 2px 2px 15px 8px rgba(198, 191, 191, 0.44);
-  margin-left: 20%;
+ margin-left: 1rem;
 }
 .section-3__p{
   padding: 5%;
@@ -150,9 +186,6 @@
 }
 .section-4{
   padding: 10%;
-  
-  
-  
   text-align: center;
  /*margin-left: -10%;
  margin-right: -2%;*/
@@ -161,16 +194,15 @@
   color: white;
   border: 50%;
 }
-
-.section-4__p{
-  width: 55%;
-  margin-left: 22%;
-  
-
+.section-4__h2{
+  font-size:x-large;
 }
+.section-4__p{
+  width: 100%;}
+
 .section-4__input,
 .section-4__button {
-  width: 60%;
+  width: 80%;
   padding: 1%;
   margin: 2%;
   border-radius: 4px;
@@ -180,7 +212,7 @@
 .section-4__button{
   border:none;
   color: white;
-  background-color: blue;
+  background-color: hsl(224, 93%, 58%);
   
 }
 
@@ -200,10 +232,8 @@
   padding: 5%;
 }
 .img-fylo{
-  color: white;
-  width: 10rem;
-  height: 5rem;
-  
+  width: 8rem;
+  filter:var(--white);
 }
 .footer__divp__2{
   padding: 5%;
@@ -237,7 +267,7 @@
   text-decoration: none;
 }
 
-@media(min-width:1200px){
+@media (min-width: 992px) and (min-width:1400px) {
 
 
   .header{
