--- a/style.css
+++ b/style.css
@@ -267,34 +267,41 @@ font-size: smaller;
   text-decoration: none;
 }
 
-@media (min-width: 992px) and (min-width:1400px) {
+@media screen and (min-width: 1200px) {
 
 
   .header{
+    gap: 65%;
     width: 100%;
+    /*width: 100%;
     gap: 70%;
     padding-bottom: 0%;
-    padding-right: 2%;
+    padding-right: 2%;*/
   }
-  .main{
-    padding-top: 0%;
-    margin-top: 0%;
+
+  .header__logo{
+    padding-left: 5rem;
   }
+  .img-header{
+    width: 10rem;
+  }
+  
+  .nav{
+
+  font-size:larger;
+  }
+  
   
   .section-desk-1{
    display: flex;
    flex-direction:row-reverse;
    justify-content: center;
    align-items: center;
-   gap: 2%;
-   margin-left: 5%;
-   width: 150%;
-
-
+   gap: 5%;
   }
 
   .section-1{
-    width: 65%;
+    width: 40%;
     padding: 2%;
     margin-left: 0%;
 
@@ -306,7 +313,10 @@ font-size: smaller;
     
   }
   .section-1__p{
-    width: 70%;
+    width: 100%;
+    justify-content: center;
+    padding-left: 15%;
+    text-align: left;
 
   }
   .img-1 {
@@ -319,13 +329,32 @@ font-size: smaller;
     width: 40rem;
   }
   .div--input{
+    width: 100%;
     padding-left: 15%;
+    display: flex;
+    align-items: center;
+  }
+
+  .section-1__input{
+    width: 80%;
+    height: 2%;
+  }
+  .section-1__button{
+    width: 30%;
+    height: 2%;
   }
    .section-desk-2{
-    margin-top: 0%;
+    margin-top: 15%;
+    padding-top: 0%;
+    align-items: center;
    }
   .curve-mobile{
-    width: 94.9rem;
+    width: 100%;
+    margin-top: -15%;
+    
+  }
+  .curva{
+    padding-top: -100%;
   }
   .background-color{
     display: flex;
@@ -348,6 +377,7 @@ font-size: smaller;
    display: flex;
    flex-direction: column;
    margin-left: -10%;
+   align-items: center;
   }
   .section-2__h2{
     width: 100%;
@@ -355,17 +385,28 @@ font-size: smaller;
     margin-left: -17%;
    
   }
-  .section-2__p{
+  .section-2__p,
+  .section-2__p2{
     width: 100%;
+    margin-left: 5%;
   }
  
   .img-2__img{
     width: 40rem;
+    padding-top: 50%;
    
    
   }
   .section2-span{
-  margin-left: -70%;
+  text-align: left;
+  padding: 0%;
+  width: 100%;
+  margin-left: -72%;
+  }
+
+  .section-2__h4{
+    font-size: medium;
+    
   }
 
   .section-3{
@@ -395,37 +436,42 @@ font-size: smaller;
 
   .section-4{
     position: absolute;
-    top:215%;
+    top:210%;
     width: 100%;
     right: 0%;
     display: flex;
-    gap: 2%;
-    height: 50%;
-    padding-top: 10%;
+    gap: 15%;
+    padding-top: 5%;
+    padding-bottom:5%;
   }
 
   .section-4--text{
-    margin-left: -30%;
+    margin-left: -5%;
     text-align: left;
+    width: 70%;
+    
   }
-  .section-4__h2{
-    margin-left: 22%;
+  .section-4--inputdiv{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .section-4__input{
-    width: 120%;
+    width: 100%;
   }
   .section-4__button{
-   margin-left: -34%;
+   margin-left: -49%;
+   width: 50%;
   }
 
   .footer{
     position: absolute;
-    top:264%;
+    top:240%;
     width: 100%;
     right: 0%;
     display: flex;
     gap: 2%;
-    height: 50%;
     
   }
   .footer__divp{
@@ -435,6 +481,8 @@ font-size: smaller;
   }
   .footer__divp__1{
     padding-top: 3%;
+    padding-bottom: 3%;
+
   }
   .footer__divp__2-span{
     padding: 2%;
